# SIMPL

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
advanced-usage/: index.html
api/environment/: index.html
api/kalman/: index.html
api/kde/: index.html
api/plotting/: index.html
api/simpl/: index.html
api/utils/: index.html
api/variable_registry/: index.html
demos/: simpl_demo.ipynb
docs/: advanced-usage.md  examples.md  getting-started.md  index.md  model.md  plotting.md  publishing_instructions.md  quickstart.md
docs/api/: environment.md  kalman.md  kde.md  plotting.md  simpl.md  utils.md  variable_registry.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
examples/: benchmark_commits.py  binning_diagnostic.ipynb  demo_utils.py  gpu_benchmark.py  index.html  scaling_benchmark.py  simpl_demo.ipynb  simpl_handreaching.ipynb
getting-started/: index.html
javascripts/: homepage.js  mathjax.js
model/: index.html
plotting/: index.html
publishing_instructions/: index.html
quickstart/: index.html
rnem/: rnem.py  utils.py
scripts/data_preparation/: preprocess_hand_reaching.py
search/: search_index.json
simpl/: environment.py  simpl.py  utils.py
src/simpl/: __init__.py  _variable_registry.py  cli.py  diagnostics.py  environment.py  kalman.py  kde.py  plotting.py  simpl.mplstyle  simpl.py  utils.py
stylesheets/: extra.css
sweeps/: README.md  sweep_aggregate.py  sweep_headdirectioncells.sh  sweep_placecells.sh  sweep_worker.py
tests/: __init__.py  conftest.py  test_cli.py  test_docs.py  test_environment.py  test_kalman.py  test_kde.py  test_plotting.py  test_simpl.py  test_utils.py  validate_trial_boundaries.py
tests/benchmarks/: compare_decode_batch_size.py
