[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simpl-neuro"
dynamic = ["version"]
description = "SIMPL: Scalable and hassle-free optimisation of neural representations from behaviour"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tom George"},
]
dependencies = [
    "jax",
    "xarray",
    "scikit-learn>=1.3",
    "scikit-image",
    "matplotlib",
    "netcdf4",
]

[project.scripts]
simpl = "simpl.cli:main"

[project.optional-dependencies]
demos = [
    "jupyter",
    "ipympl",
]
metal = [
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "jax-metal",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "build",
    "twine",
    "nbstripout",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/simpl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/simpl"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=simpl --cov-report=term-missing"
markers = [
    "docs: tests that build the documentation",
    "cpu_only: force test to run on CPU (for ops unsupported on Metal: linalg.inv, cholesky, fft)",
]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.coverage.run]
source = ["simpl"]

[tool.coverage.report]
show_missing = true
fail_under = 80
